--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cloudinary/base": "^1.0.0-beta.3",
+    "@cloudinary/react": "^1.0.0-beta.8",
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
     "@sendgrid/mail": "^7.4.5",
@@ -10,6 +12,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "cloudinary-react": "^1.7.0",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "netlify-lambda": "^2.0.11",
