take out other components so i can see what it looks like on mobile

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,21 +19,22 @@
     "prettier"
   ],
   "rules": {
-"no-unused-vars": "error",
-  "react/button-has-type": 0,
-  "import/prefer-default-export": 0,
-  "react/jsx-props-no-spreading": 0,
-  "react/jsx-filename-extension": [1, {
-    "extensions": [".js", ".jsx"]
-  }],
-  "no-console": 0
+    "no-unused-vars": 0,
+    "react/button-has-type": 0,
+    "import/prefer-default-export": 0,
+    "react/jsx-props-no-spreading": 0,
+    "react/jsx-filename-extension": [1, {
+      "extensions": [".js", ".jsx"]
+    }],
+    "no-console": 0
   },
   "overrides": [
     {
       "files": ["webpack.*.js", "setupTests.js"],
       "rules": {
         "import/no-extraneous-dependencies": 0,
-        "no-console": 0
+        "no-console": 0,
+        "no-unused-vars": 0
       }
     }
   ]
