--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,7 @@
     "prettier"
   ],
   "rules": {
-    "no-unused-vars": 0,
+    "no-unused-vars": "error",
     "react/button-has-type": 0,
     "import/prefer-default-export": 0,
     "react/jsx-props-no-spreading": 0,
@@ -33,8 +33,7 @@
       "files": ["webpack.*.js", "setupTests.js"],
       "rules": {
         "import/no-extraneous-dependencies": 0,
-        "no-console": 0,
-        "no-unused-vars": 0
+        "no-console": 0
       }
     }
   ]
