--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
   ],
   "rules": {
     "no-unused-vars": "error",
+    "react/no-array-index-key": 0,
     "react/button-has-type": 0,
     "import/prefer-default-export": 0,
     "react/jsx-props-no-spreading": 0,
