--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,11 @@ publish = 'build'
 from = "/*"
 to = "/index.html"
 status = 200
+[[headers]]
+  for = "/*"
+  [headers.values]
+	cache-control = '''
+	max-age=31536000,
+	no-cache,
+	no-store,
+	must-revalidate'''
