--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "dependencies": {
     "@cloudinary/base": "^1.0.0-beta.3",
     "@cloudinary/react": "^1.0.0-beta.8",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.0.6",
     "@sendgrid/mail": "^7.4.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "form-data": "^4.0.0",
     "formik": "^2.2.9",
     "gatsby": "^3.11.0",
