--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 functions = "functions"
-command = 'npm run build'
+command = 'CI= npm run build'
 publish = 'build'
 [[redirects]]
 from = "/*"
